[project]
name = "python-auto"
version = "0.1.0"
description = ""
authors = [
    {name = "dsad233",email = "ksl1421@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydirectinput (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
